# jitsi-openid

./: .gitignore  Cargo.toml  Dockerfile  README.md  derivation.nix  flake.nix  go.mod  go.sum  main.go  module.nix  package-lock.json  package.json  package.nix  tsconfig.json  webpack.config.js
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yaml
deb/DEBIAN/: control
src/: app.mjs  cfg.rs  error.rs  index.ts  main.rs  routes.rs
