[package]
name = "jitsi-openid"
version = "2.0.7"
edition = "2021"

[dependencies]
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "signal"], default-features = false }
axum = { version = "0.6", features = ["tokio", "http1", "query", "headers"], default-features = false }
openidconnect = { version = "3.4", features = ["reqwest", "rustls-tls", ], default-features = false }
axum-extra = { version = "0.8", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5", features = ["v4"] }
tracing-subscriber = "0.3"
jsonwebtoken = "9.1"
tracing = "0.1"
config = "0.13"
anyhow = "1.0"
time = "0.3"
url = "2.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize for size
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.release.package."*"]
codegen-units = 1
