[package]
name = "jitsi-openid"
version = "2.0.18"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync"], default-features = false }
openidconnect = { version = "4.0", features = ["reqwest", "rustls-tls"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"], default-features = false }
axum = { version = "0.8", features = ["tokio", "http1", "query"], default-features = false }
axum-extra = { version = "0.10", features = ["cookie"], default-features = false }
anyhow = { version = "1.0", features = ["std"], default-features = false }
uuid = { version = "1.17", features = ["v4"], default-features = false }
jsonwebtoken = { version = "9.3", default-features = false }
tracing = { version = "0.1", default-features = false }
config = { version = "0.15", default-features = false }
serde = { version = "1.0", default-features = false }
time = { version = "0.3", default-features = false }
url = { version = "2.5", default-features = false }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize for size
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.release.package."*"]
codegen-units = 1
